# wisey-telemetry

./: pyproject.toml
src/wisey-telemetry/: setup.py
src/wisey_telemetry/: __init__.py  job_metrics.py  kafka_metrics.py  telemetry.py
