[project]
name = "wisey-telemetry"  # ✅ guión, no guión bajo
version = "0.1.0"
description = "Reusable OpenTelemetry setup for Wewise microservices"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-jaeger-thrift",
    "opentelemetry-instrumentation-fastapi"
]

[tool.setuptools]
packages = ["wisey_telemetry"]  # ✅ guión bajo acá, porque es el nombre del módulo Python
package-dir = {"" = "src"}
